manifests/istio/gateway/test-gateway.yaml
# test-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - harbor.seokmin.com
        - argocdt.seokmin.com
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: wildcard-seokmin-com-tls
      hosts:
        - harbor.seokmin.com
        - argocdt.seokmin.com
